2011-03-13  Anton D'Auria  <adauria@apple.com>

Reviewed by Alice Liu.

        StorageTracker constructor shouldn't have initialization code and isMainThread() assertion
        https://bugs.webkit.org/show_bug.cgi?id=56259

        Move all StorageTracker initialization to
        StorageTracker::initializeTracker. This also removes the
        requirement that the StorageTracker constructor isn't run
        on the main thread.

        * storage/StorageTracker.cpp:
        (WebCore::StorageTracker::initializeTracker):
        (WebCore::StorageTracker::tracker):
        (WebCore::StorageTracker::StorageTracker):

Canonical link: https://commits.webkit.org/70849@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@80964 268f45cc-cd09-0410-ab3c-d52691b4dbfc